plugins {
    id 'com.android.application'
}

def baseVersionName = providers.gradleProperty(
        'magicDeskVersionName').get()
def baseVersionCode = providers.gradleProperty(
        'magicDeskVersionCode').get().toInteger()
def versionSuffix = providers.gradleProperty(
        'MAGICDESK_VERSION_SUFFIX').orNull
def requestedPlatformOverride = providers.gradleProperty(
        'MAGICDESK_PLATFORM_OVERRIDE').orNull
def debugPlatformOverride = requestedPlatformOverride == null
        ? '' : requestedPlatformOverride.trim().toLowerCase(Locale.ROOT)
if (!(debugPlatformOverride in ['', 'android'])) {
    throw new GradleException(
            'MAGICDESK_PLATFORM_OVERRIDE must be empty or android')
}
def requestedFrameworkOverride = providers.gradleProperty(
        'MAGICDESK_FRAMEWORK_OVERRIDE').orNull
def debugFrameworkOverride = requestedFrameworkOverride == null
        ? '' : requestedFrameworkOverride.trim().toLowerCase(Locale.ROOT)
if (!(debugFrameworkOverride in ['', 'android15'])) {
    throw new GradleException(
            'MAGICDESK_FRAMEWORK_OVERRIDE must be empty or android15')
}

android {
    namespace = 'io.github.mekhontsev.magicdesk'
    compileSdk = 37
    ndkVersion = '27.3.13750724'

    defaultConfig {
        applicationId = 'io.github.mekhontsev.magicdesk'
        minSdk = 35
        targetSdk = 37
        versionCode = baseVersionCode
        versionName = versionSuffix == null || versionSuffix.isBlank()
                ? baseVersionName
                : baseVersionName + '-' + versionSuffix
        buildConfigField 'String', 'PLATFORM_OVERRIDE', '""'
        buildConfigField 'String', 'FRAMEWORK_OVERRIDE', '""'
    }

    buildTypes {
        debug {
            buildConfigField 'String', 'PLATFORM_OVERRIDE',
                    '"' + debugPlatformOverride + '"'
            buildConfigField 'String', 'FRAMEWORK_OVERRIDE',
                    '"' + debugFrameworkOverride + '"'
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    buildFeatures {
        aidl = true
        buildConfig = true
    }

    packagingOptions {
        jniLibs {
            // Shell launches the extracted helpers from nativeLibraryDir.
            useLegacyPackaging = true
            excludes += ['**/libtermux.so']
            keepDebugSymbols += [
                    '**/libmagicdesk_uinput_bridge.so',
                    '**/libmagicdesk_keyboard_bridge.so',
                    '**/libmagicdesk_pty_bridge.so'
            ]
        }
    }

    sourceSets {
        main.assets.srcDir rootProject.file('third_party')
    }
}

apply from: rootProject.file('gradle/native-helpers.gradle')

dependencies {
    compileOnly 'androidx.annotation:annotation:1.3.0'
    implementation('dev.rikka.shizuku:api:13.1.5') {
        exclude group: 'androidx.annotation', module: 'annotation'
    }
    implementation('dev.rikka.shizuku:provider:13.1.5') {
        exclude group: 'androidx.annotation', module: 'annotation'
    }
    implementation('com.github.termux.termux-app:terminal-emulator:v0.118.3') {
        exclude group: 'androidx.annotation', module: 'annotation'
    }
    compileOnly project(':hidden-api-stubs')
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.json:json:20240303'
}

apply from: rootProject.file('gradle/release-signing.gradle')
